<resources>
    <string name="app_name">千校云</string>
    <string name="module_cookbook">今日食谱</string>
    <string name="home">首页</string>
    <string name="message">消息</string>
    <string name="exchange">交流</string>
    <string name="mine">我</string>
    <string name="state_network_error">网络错误</string>
    <string name="state_loading">正在加载…</string>
    <string name="state_not_more">没有更多数据</string>
    <string name="state_load_error">加载失败</string>
    <string name="state_refreshing">正在刷新</string>
    <string name="copy_success">复制成功</string>
    <string name="gallery_save_file_not_have_external_storage">没有外部存储!</string>
    <string name="gallery_save_file_success">保存成功!</string>
    <string name="gallery_save_file_failed">存储失败!</string>
    <string name="image_select_opt_done">完成</string>
    <string name="image_select_opt_preview">预览</string>
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_hint">输入账号或手机号</string>
    <string name="password_hint">输入密码</string>
    <string name="login_status_success">登录成功。</string>
    <string name="login_status_null_username_or_password">帐号和密码不能为空。</string>
    <string name="progress_login">正在登录…</string>
    <string name="remember_pass">记住密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="auto_login">自动登录</string>
    <string name="choose_school">选择学校</string>
    <string name="tip_no_internet">当前没有可用的网络</string>
    <string name="loading">加载中…</string>
    <string name="navibar_more">更多</string>
    <string name="main_home_exit">再按一次退出程序</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="work_manager">作业查看</string>
    <string name="work_preview">作业预览</string>
    <string name="work_manager_class">班级：</string>
    <string name="work_manager_one">班级</string>
    <string name="work_manager_two">科目</string>
    <string name="work_manager_three">教师</string>
    <string name="work_manager_four">时间</string>
    <string name="school_calendar_manager">校历查看</string>
    <string name="school_calendar_manager_week">周</string>
    <string name="personal_calendar">个人行事历</string>
    <string name="net_request_data">请求数据：</string>
    <string name="show_all">全文 &gt;</string>
    <string name="close_show_all">收起 &lt; </string>
    <string name="version">版本</string>
    <string name="company_name">杭州智鹏教育科技股份有限公司\n tel:0571-86689966</string>
    <string name="receiving_object">接收对象：</string>
    <string name="please_select_the_receiving_object">请选择接收对象</string>
    <string name="conference_theme">内容：</string>
    <string name="please_enter_a_conference_theme">请输入会议主题</string>
    <string name="conference_content">会议内容：</string>
    <string name="please_enter_the_conference_content">请输入会议内容</string>
    <string name="whether_you_need_a_receipt">是否需要回执</string>
    <string name="preservation">保存</string>
    <string name="release">发布</string>
    <string name="subject">科目:</string>
    <string name="please_select_subjects">请选择科目</string>
    <string name="grade">班级：　</string>
    <string name="job_length">作业时长：</string>
    <string name="please_enter_a_long_time">请输入时长</string>
    <string name="minute">分钟</string>
    <string name="time_of_delivery">上交时间：</string>
    <string name="please_select_the_time">请选择时间</string>
    <string name="content">内容:</string>
    <string name="remark">备注:</string>
    <string name="please_enter_the_content">请输入内容</string>
    <string name="type">类型:</string>
    <string name="please_select_the_type_of_meal">请选择类型</string>
    <string name="breakfast">早餐</string>
    <string name="immediate_experience">立即体验</string>
    <string name="album_initialization">相册初始化中..</string>
    <string name="individual_moral_education">个人德育</string>
    <string name="inspection_date">检查日期:</string>
    <string name="please_enter_student_number_or_card_number">请输入学生号或卡号</string>
    <string name="section">节次</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="hunt_for">搜索</string>
    <string name="pet_name">昵称</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="accounts">帐号</string>
    <string name="phone_number">手机号</string>
    <string name="school">学校</string>
    <string name="department">部门</string>
    <string name="the_number_of_staff">教工号</string>
    <string name="campus_news">校园新闻</string>
    <string name="title">标题</string>
    <string name="add_comments_no_more_than_200_words">添加评论（不超过200字）</string>
    <string name="say_your_opinion">说出你的意见吧</string>
    <string name="submit">提交</string>
    <string name="reasons_to_go_out_the_content_of_up_to_80_characters">请输入外出理由</string>
    <string name="please_enter_calendar_content">请输入行事历内容</string>
    <string name="send_out">确认</string>
    <string name="select_the_contact">选择联系人</string>
    <string name="item_name">物品名称:</string>
    <string name="please_enter_the_name_of_the_item">请输入物品名称</string>
    <string name="repair_site">报修地点:</string>
    <string name="please_enter_the_repair_site">请输入报修地点</string>
    <string name="repair_department">修理部门:</string>
    <string name="please_select_repair_department">请选择修理部门</string>
    <string name="situation_description">情况描述:</string>
    <string name="please_briefly_describe_the_situation_of_things">请简单描述物品情况</string>
    <string name="repair_application">报修申请</string>
    <string name="repair_finish">已完成</string>
    <string name="repair_reback">退回</string>
    <string name="select_from_the_album">从相册选择</string>
    <string name="photograph">拍照</string>
    <string name="please_enter_the_old_password">请输入旧密码</string>
    <string name="please_enter_a_new_password">请输入新密码</string>
    <string name="enter_new_password_again">再次输入新密码</string>
    <string name="teacher">教师:</string>
    <string name="job_name">作业名称：</string>
    <string name="release_time">发布时间：</string>
    <string name="job_content">作业内容：</string>
    <string name="management_department">管理部</string>
    <string name="already_applied">已申请</string>
    <string name="send_object">发送对象:</string>
    <string name="call">呼叫</string>
    <string name="high_priority">高优先级</string>
    <string name="middle_priority">中优先级</string>
    <string name="low_priority">低优先级</string>
    <string name="no_priority">无优先级</string>
    <string name="select_date">选择日期</string>
    <string name="please_select_start_time">请选择起始时间</string>
    <string name="please_select_deadline">请选择截止时间</string>
    <string name="clear_options">清除选项</string>
    <string name="userName">用户名</string>
    <string name="loading_more">正在加载更多..</string>
    <string name="contact">联系人</string>
    <string name="personal_data_center">个人资料中心</string>
    <string name="mine_pay">个人支付</string>
    <string name="feedback">意见反馈</string>
    <string name="online_service">在线客服</string>
    <string name="about">关于</string>
    <string name="modify_password">修改密码</string>
    <string name="exit_login">退出登录</string>
    <string name="confirm_exiting_current_account">确认退出当前账户？</string>
    <string name="leadership_of_week">值周领导:</string>
    <string name="load_more">加载更多</string>
    <string name="pull_up_load_more">上拉加载更多</string>
    <string name="pull_down_refresh">下拉刷新</string>
    <string name="boutique_application_recommended_download">精品应用推荐下载</string>
    <string name="drafts">草稿箱</string>
    <string name="screen">筛选　</string>
    <string name="cut_off">删除　</string>
    <string name="guarantee_department">报修部门:</string>
    <string name="to_examine">审核</string>
    <string name="retreat">退回</string>
    <string name="disagree">不同意</string>
    <string name="agree_two">同意</string>
    <string name="course_arrangement">课程安排</string>
    <string name="reason_for_leave">请假理由：</string>
    <string name="time_off">请假时间：</string>
    <string name="leave_type">请假类型：</string>
    <string name="repairs_title">报修申请</string>
    <string name="repairs_detail_title">报修详情</string>
    <string name="title_activity_person_moral_education_detail">PersonMoralEducationDetailActivity
    </string>
    <string name="about_us">关于我们</string>
    <string name="head_portrait">头像</string>
    <string name="test">测试</string>
    <string name="my_school">我的学校</string>
    <string name="please_enter_history_time">请选择历史时间</string>
    <string name="please_choose_grades_and_classes">请选择年级/班级</string>
    <string name="please_enter_the_student_number_and_name">请输入学生学号或姓名</string>
    <string name="student_name">学生姓名</string>
    <string name="record_time">记录时间</string>
    <string name="place">地点</string>
    <string name="entry_and_exit">出入校</string>
    <string name="choose_student">选择学生</string>
    <string name="selected_school_teachers">选发校内教师</string>
    <string name="the_parents_of_the_students">选发学生家长</string>
    <string name="please_enter_a_title">请输入标题</string>
    <string name="meeting_time">会议时间:</string>
    <string name="informations_in_BBS">站内信息</string>
    <string name="Jpush">APP推送</string>
    <string name="short_message">短信</string>
    <string name="select_all">全选</string>
    <string name="can_enter_up_to_25_characters">最多可输入25个字符</string>
    <string name="treatment_opinion">处理意见:</string>
    <string name="Apply">申请</string>
    <string name="examination_and_approval">审批</string>
    <string name="Agree_with_the_Hezhuo_campus_user_privacy_agreement">同意 《智鹏千校云用户隐私协议》</string>
    <string name="reason">理由</string>
    <string name="Compassionate_leave">事假</string>
    <string name="leave_start_time">请假起始时间：</string>
    <string name="current_password">当前密码</string>
    <string name="new_password">新密码</string>
    <string name="sure_new_password">确认新密码</string>
    <string name="confirm_submission">确认提交</string>
    <string name="current_location">当前位置</string>
    <string name="go_to_school_route">上学路线</string>
    <string name="leave_school_route">放学路线</string>
    <string name="historical_route">历史路线</string>
    <string name="teacher_name">教师姓名</string>
    <string name="type_no">类型</string>
    <string name="visitor_name1">访客姓名:</string>
    <string name="visitor_phone">访客手机:</string>
    <string name="visitor_num">同行人数:</string>
    <string name="visit_time1">预约拜访时间:</string>
    <string name="visit_company">拜访单位:</string>
    <string name="visit_reason">拜访事由:</string>
    <string name="visitor_name_hint">请输入访客姓名</string>
    <string name="visitor_phone_hint">请输入访客手机号码</string>
    <string name="visitor_num_hint">请输入同行人数</string>
    <string name="visit_time1_hint">请输入预约时间</string>
    <string name="visit_company_hint">请输入访客单位</string>
    <string name="visit_reason_hint">请输入访客事由</string>
    <string name="send_verify_code">发送动态验证码</string>
    <string name="send_code_remarks">注：每次访客活动最多只能发送3次动态验证码，\n且两次发送间隔需大于2分钟</string>
</resources>