<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.MyScheduleActivity">

    <include layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/activity_my_schedule_ll"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_30"
                android:gravity="center"
                android:text="@string/section"
                android:background="@color/schedule_griditems_bg"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/one" />
            <!--<View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#"/>-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/two" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/three"
                android:id="@+id/textView2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/four" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/five" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/six" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/seven" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/eight" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <GridView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:id="@+id/activity_my_schedule_grid"
                        android:horizontalSpacing="@dimen/dp_0"
                        android:numColumns="7"
                        android:scrollbars="none"
                        android:listSelector="@null"
                        android:verticalSpacing="@dimen/dp_0">
                    </GridView>
                </LinearLayout>
            </HorizontalScrollView>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
